# ComfyUI-OpenClaw

./: .pre-commit-config.yaml  README.md  ROADMAP.md  config.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
api/: approvals.py  assist.py  bridge.py  capabilities.py  checkpoints_handler.py  config.py  connector_contracts.py  events.py  model_manager.py  pnginfo.py  preflight_handler.py  presets.py  remote_admin.py  rewrite_recipes.py  route_registrars.py  routes.py  schedules.py  secrets.py  security_doctor.py  templates.py  tools.py  triggers.py  webhook.py  webhook_submit.py  webhook_validate.py
connector/: __main__.py  config.py  contract.py  results_poller.py  router.py
docs/: RELEASE_CHECKLIST.md  SECURITY.md  connector.md  frontend_ux_walkthrough.md  openapi.yaml  r69_ui_framework_migration_decision.md  runtime_hardening_and_startup.md  security_checklist.md  security_deployment_guide.md  security_key_lifecycle_sop.md  sidecar.md  troubleshooting.md
models/: schemas.py
nodes/: image_to_prompt.py  prompt_refiner.py
scripts/: check_openapi_sync.py  pre_push_checks.sh  precommit_block_sensitive_files.py  preflight_check.py  regenerate_openapi_if_needed.py  run-playwright.mjs  run_adversarial_gate.py  run_full_tests_linux.sh  run_full_tests_windows.ps1  verify_quality_governance.py
services/: access_control.py  aiohttp_compat.py  audit.py  automation_composer.py  bridge_token_lifecycle.py  callback_delivery.py  capabilities.py  checkpoints.py  comfyui_history.py  compatibility_matrix_governance.py  config_layers.py  connector_callback_contract.py  connector_installation_registry.py  effective_config.py  failover.py  integrity.py  job_events.py  legacy_compat.py  llm_client.py  llm_model_list.py  model_manager.py  model_manager_catalog.py  model_manager_tasks.py  model_manager_transfer.py  openapi_generation.py  operator_doctor.py  parameter_lab.py  planner.py  planner_registry.py  pnginfo.py  preflight.py  rate_limit.py  reasoning_redaction.py  redaction.py  refiner.py  request_contracts.py  request_ip.py  rewrite_recipes.py  route_bootstrap.py  route_bootstrap_contract.py  (+11 more)
tests/: E2E_TESTING_NOTICE.md  E2E_TESTING_SOP.md  TEST_SOP.md  mutation_survivor_allowlist.json  skip_policy.json  test_api_connector_contracts.py  test_api_model_list.py  test_api_pnginfo.py  test_assist_llm_client_hot_reload.py  test_capabilities.py  test_capabilities_contract.py  test_checkpoints.py  test_ci_security_audit_workflow.py  test_comfyui_history_parsing.py  test_connector_callback_contract.py  test_connector_installation_registry.py  test_effective_config.py  test_f46_worker_e2e.py  test_f57_slack_transport_parity.py  test_f58_slack_oauth_installations.py  test_f61_remote_admin_console.py  test_f67_feishu_transport_parity.py  test_f68_feishu_installations.py  test_f69_feishu_callbacks.py  test_failover.py  test_full_test_script_playwright_bootstrap.py  test_github_actions_runtime_contract.py  test_legacy_compat.py  test_llm_client_hot_reload_non_assist.py  test_llm_client_plugins.py  test_llm_model_list_service.py  test_model_manager_api.py  test_model_manager_service.py  test_openapi_regen_hook.py  test_openapi_sync_guard.py  test_planner_registry.py  test_pnginfo_service.py  test_precommit_block_sensitive_files.py  test_provider_url_contract_matrix.py  test_providers.py  (+33 more)
web/: admin_console.html  admin_console_api.js  admin_console_app.js  openclaw.js  openclaw_actions.js  openclaw_api.js  openclaw_asset_refs.js  openclaw_banner_manager.js  openclaw_compat.js  openclaw_graph_host.js  openclaw_host_surface.js  openclaw_notification_center.js  openclaw_notifications.js  openclaw_queue_monitor.js  openclaw_security_advisory.js  (+4 more)
(+74 files in other folders)
